2007-02-06  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge.doap:
	Corrections.

2006-12-20  Ross Burton  <ross@openedhand.com>

	* libgconf-bridge.doap:
	Add DOAP file.

2006-04-29  Luca Cavalli  <loopback@slackit.org>

	* libgconf-bridge/gconf-bridge.c:
	(window_binding_perform_scheduled_sync),
	(window_binding_state_event_cb), (gconf_bridge_bind_window):

	Save and restore window maximized state.

2006-02-16  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* doc/Makefile.in:
	* po/POTFILES.in:
	
	Build fixes.

2005-12-15  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge/gconf-bridge.c:
	(gconf_bridge_bind_string_list_store):

	Fix a warning under some versions of gcc.

2005-12-09  Ross Burton  <ross@openedhand.com>

	* doc/libgconf-bridge-docs.sgml:
	* doc/tmpl/gconf-bridge.sgml:
	* libgconf-bridge/gconf-bridge.c:
	* libgconf-bridge/gconf-bridge.h:
	Take API documentation to 100% coverage.

2005-12-09  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* libgconf-bridge/gconf-bridge.c:

	Added a check for CORBA GConf, and if found add a ( better ) workaround
	for GConf bug #322837.

2005-12-09  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* libgconf-bridge/gconf-bridge.c:

	Added check for gconf_value_compare() declaration.

2005-11-30  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge/gconf-bridge.c: (prop_binding_sync_pref_to_prop),
	(prop_binding_sync_prop_to_pref), (prop_binding_pref_changed),
	(prop_binding_perform_scheduled_sync), (prop_binding_prop_changed),
	(gconf_bridge_bind_property_full), (prop_binding_unbind),
	(list_store_binding_sync_pref_to_store),
	(list_store_binding_sync_store_to_pref),
	(list_store_binding_pref_changed),
	(list_store_binding_store_changed_cb),
	(gconf_bridge_bind_string_list_store), (list_store_binding_unbind):

	Keep track of changes as to avoid the "backsync" effect.

	Also cleaned up blocking.

2005-11-30  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge/gconf-bridge.c: