@@ -1,0 +1,23 @@
+/* libgconf-bridge.vapi generated by vapigen, do not modify. */
+
+[CCode (cprefix = "GConfBridge", lower_case_cprefix = "gconf_bridge_")]
+namespace GConfBridge {
+	[Compact]
+	[CCode (cheader_filename = "libgconf-bridge.h")]
+	public class  {
+		[CCode (cname = "gconf_bridge_bind_property_full")]
+		public uint bind_property_full (string key, GLib.Object object, string prop, bool delayed_sync=false);
+		[CCode (cname = "gconf_bridge_bind_string_list_store")]
+		public uint bind_string_list_store (string key, Gtk.ListStore list_store);
+		[CCode (cname = "gconf_bridge_bind_window")]
+		public uint bind_window (string key_prefix, Gtk.Window window, bool bind_size, bool bind_pos);
+		[CCode (cname = "gconf_bridge_get")]
+		public static weak GConfBridge. get ();
+		[CCode (cname = "gconf_bridge_get_client")]
+		public weak GConf.Client get_client ();
+		[CCode (cname = "gconf_bridge_install_default_error_handler")]
+		public static void install_default_error_handler ();
+		[CCode (cname = "gconf_bridge_unbind")]
+		public void unbind (uint binding_id);
+	}
+}
