@@ -1,3 +1,11 @@
+2008-07-02  Jorn Baayen  <jorn@openedhand.com>
+
+	* Makefile.am:
+	* configure.ac:
+	* libgconf-bridge.vapi:
+
+	Add vala bindings.
+
 2007-02-06  Jorn Baayen  <jorn@openedhand.com>
 
 	* libgconf-bridge.doap:
